# DiscordCommandRunner

./: .gitignore  README.md  config.example.yaml  install.sh  pyproject.toml
scripts/command_runner/: __main__.py  bot.py  sessions.py
scripts/hooks/: session_status.sh
